# content-based-movie-recommender-system

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  template.py
mlruns/0/: meta.yaml
mlruns/0/56913f762d0049c093717276612c9c1c/: meta.yaml
mlruns/0/56913f762d0049c093717276612c9c1c/metrics/: precision_at_5
mlruns/829046829403621377/: meta.yaml
notebooks/: experiments.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/0/072661b742db4fed8a239e9df44bd4f4/: meta.yaml
notebooks/mlruns/0/072661b742db4fed8a239e9df44bd4f4/tags/: mlflow.runName
notebooks/mlruns/0/1f0b058b97344a1fb3e47481b0c07a17/: meta.yaml
notebooks/mlruns/0/1f0b058b97344a1fb3e47481b0c07a17/metrics/: precision_at_5
notebooks/mlruns/0/1f0b058b97344a1fb3e47481b0c07a17/tags/: mlflow.runName
notebooks/mlruns/0/6227390ebbd146fa872a10676b4a1058/: meta.yaml
notebooks/mlruns/0/6227390ebbd146fa872a10676b4a1058/metrics/: precision_at_5
notebooks/mlruns/0/96927420d757483fb069d7222fad8191/: meta.yaml
notebooks/mlruns/0/96927420d757483fb069d7222fad8191/metrics/: precision_at_5
notebooks/mlruns/0/96927420d757483fb069d7222fad8191/tags/: mlflow.source.name
src/: main.py
